# ChatProgram

./: README.md  s
RelyConn_Client/: CMakeLists.txt  main.c
RelyConn_Client/src/: errormess.c  errormess.h  formatter_message.c  formatter_message.h  main.c
RelyConn_Server/: CMakeLists.txt  FindGMP.cmake  main.c  project_plan.txt  server_executable
RelyConn_Server/src/: des_encryption_data.h  main.c  user_handler.c  user_handler.h
Testing/: main.c  test
utils/: strformatting.c  strformatting.h
